packages/ingest/container-rust/tests/ui/xmlspec/fail/invalid_extractor.rs
use usc_ingest::xmlspec;

xmlspec! {
    schema BadExtractor {
        record Item
        from tag("item")
        {
            value: unknown() where tag("value"),
        }
    }
}

fn main() {}
