packages/ingest/container-rust/tests/ui/xmlspec/fail/invalid_extractor.stderr
error: expected first_text(), all_text(), attr("..."), or all_fragments()
 --> tests/ui/xmlspec/fail/invalid_extractor.rs:8:20
  |
8 |             value: unknown() where tag("value"),
  |                    ^^^^^^^
